resize of image only when growing the window